--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "maydana/php-di",
+    "name": "19950512/php-di",
     "autoload": {
         "psr-4": {
             "App\\": "src/"
